--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PeterNaydenov/visual-controller-for-vue3.git"
+  },
+
   "author": "Peter Naydenov",
   "license": "ISC"
 }
