--- a/package.json
+++ b/package.json
@@ -2,14 +2,28 @@
   "name": "@peter.naydenov/visual-controller-for-vue3",
   "version": "1.1.1",
   "description": "Use it when single javascript application should control multiple vue3 apps.",
-  "main": "main.js",
+  "main": "src/main.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "cypress open --component --browser chrome"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/PeterNaydenov/visual-controller-for-vue3.git"
   },
+  "dependencies": {
+    "ask-for-promise": "^1.3.1",
+    "vue": "^3.2.41"
+  },
+  "devDependencies": {
+    "@peter.naydenov/notice": "^1.1.0",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "cypress": "^11.1.0",
+    "vite": "^3.2.3"
+  },
   "author": "Peter Naydenov",
-  "license": "ISC"
+  "license": "MIT"
 }
