--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "url": "https://github.com/PeterNaydenov/visual-controller-for-vue3.git"
   },
   "dependencies": {
-    "ask-for-promise": "^3.0.1",
-    "vue": "^3.5.17"
+      "ask-for-promise": "^3.0.1"
   },
   "devDependencies": {
     "@peter.naydenov/notice": "^2.4.1",
@@ -38,6 +37,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "cypress": "^14.5.3",
     "rollup": "^4.46.2",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "vue": "^3.5.18"
   }
 }
